--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ androidx-activity = "1.10.1"
 androidx-lifecycle = "2.8.4"
 composeHotReload = "1.0.0-alpha09"
 composeMultiplatform = "1.8.0"
+glukycore = "1.0.0"
 kotlin = "2.1.21"
 kotlinx-coroutines = "1.10.2"
 equinox = "1.1.2"
@@ -17,7 +18,7 @@ coilCompose = "3.1.0"
 ktor = "3.1.0"
 
 [libraries]
-kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
+glukycore = { module = "com.tecknobit.glukycore:glukycore", version.ref = "glukycore" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
