--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ android-minSdk = "24"
 android-targetSdk = "35"
 androidx-activity = "1.10.1"
 androidx-lifecycle = "2.8.4"
+composeCharts = "0.1.7"
 composeHotReload = "1.0.0-alpha09"
 composeMultiplatform = "1.8.0"
 glukycore = "1.0.0"
@@ -22,6 +23,7 @@ richeditorCompose = "1.0.0-rc12"
 sonner = "0.3.8"
 
 [libraries]
+compose-charts = { module = "io.github.ehsannarmani:compose-charts", version.ref = "composeCharts" }
 glukycore = { module = "com.tecknobit.glukycore:glukycore", version.ref = "glukycore" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
