--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ android-targetSdk = "36"
 androidx-activity = "1.11.0"
 androidx-lifecycle = "2.9.5"
 composeCharts = "0.2.0"
-composeMultiplatform = "1.9.1"
+composeMultiplatform = "1.9.2"
 filekit = "0.12.0"
 glukycore = "1.0.1"
 jetlime = "4.0.0"
@@ -15,7 +15,7 @@ kotlinx-coroutines = "1.10.2"
 equinox = "1.1.7"
 equinox-navigation = "1.0.4"
 kotlinxDatetime = "0.7.1"
-precompose = "1.7.0-alpha03"
+navigationCompose = "2.9.1"
 coilCompose = "3.3.0"
 ktor = "3.1.0"
 kotlinxSerializationJson = "1.9.0"
@@ -41,7 +41,7 @@ equinox-compose = { module = "io.github.n7ghtm4r3:equinox-compose", version.ref 
 equinox-core = { module = "io.github.n7ghtm4r3:equinox-core", version.ref = "equinox" }
 equinox-navigation = { module = "io.github.n7ghtm4r3:equinox-navigation", version.ref = "equinox-navigation" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
-precompose = { module = "moe.tlaster:precompose", version.ref = "precompose" }
+navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
 coil-network-ktor3 = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "ktor" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
