--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ androidx-lifecycle = "2.9.5"
 composeCharts = "0.2.0"
 composeMultiplatform = "1.9.2"
 filekit = "0.12.0"
+fragmentKtx = "1.8.9"
 glukycore = "1.0.1"
 jetlime = "4.0.0"
 kotlin = "2.2.21"
@@ -28,6 +29,7 @@ dokka = "2.1.0"
 buildconfig = "5.7.0"
 
 [libraries]
+androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
 compose-charts = { module = "io.github.ehsannarmani:compose-charts", version.ref = "composeCharts" }
 filekit-core = { module = "io.github.vinceglb:filekit-core", version.ref = "filekit" }
 filekit-dialogs-compose = { module = "io.github.vinceglb:filekit-dialogs-compose", version.ref = "filekit" }
